LearningPath/2017/SpringBoot/SpringBootTemplate/configuration/deploy-config.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: [APPLICATION_NAME]
  name: [SERVICE_ARTIFACT_ID]
spec:
  replicas: 1
  selector:
    app: [SERVICE_ARTIFACT_ID]
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 300
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: [SERVICE_ARTIFACT_ID]
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CONTAINER_CORE_LIMIT
          valueFrom:
            resourceFieldRef:
              resource: limits.cpu
        - name: CONTAINER_MAX_MEMORY
          valueFrom:
            resourceFieldRef:
              resource: limits.memory
        image: docker-registry:5000/mo-ola-dev/[SERVICE_ARTIFACT_ID]:none
        imagePullPolicy: Always
        name: [SERVICE_ARTIFACT_ID]
        # livenessProbe:
          # tcpSocket:
            # port: [SERVICE_DEFAULT_PORT]
          # initialDelaySeconds: 30
          # periodSeconds: 30
          # timeoutSeconds: 5
          # successThreshold: 1
          # failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: [SERVICE_DEFAULT_PORT]
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 768Mi
            cpu: 250m
      restartPolicy: Always
