LearningPath/2017/SpringBoot/SpringBootTemplate/configuration/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: [APPLICATION_NAME]
  name: [SERVICE_ARTIFACT_ID]
spec:
  port:
    targetPort: [SERVICE_DEFAULT_PORT]
  to:
    kind: Service
    name: [SERVICE_ARTIFACT_ID]
